Fixed horizontal scroll bar issue

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,10 @@ html{
     color: #222222;
 }
 
+body{
+    margin: 0;
+}
+
 #canvas {
     display: block;
     z-index: -1;
